# VPNLayer_CMake

./: CMakeLists.txt  VPNLayer.rc  connectwindow.cpp  connectwindow.h  connectwindow.ui  downloadfile.cpp  downloadfile.h  getservers.cpp  getservers.h  log.cpp  log.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.qrc  mainwindow.ui  settings.h  settingswindow.cpp  settingswindow.h  settingswindow.ui  showlog.cpp  showlog.h  showlog.ui  utils.h
Mac/: Info.plist  MacApplication.h  MacApplication.mm  connection.cpp  connection.h  icon.icns  qopenvpn.cpp  qopenvpn.h
Mac/Helpers/: pptpl2tp.cpp  settings.c  start.c  stop.c
Mac/Kext/tap-20090913.kext/Contents/: Info.plist
Mac/Kext/tap-20090913.kext/Contents/MacOS/: tap
Mac/Kext/tap-bak.kext/Contents/: Info.plist
Mac/Kext/tap-signed.kext/Contents/: Info.plist
Mac/Kext/tap-signed.kext/Contents/_CodeSignature/: CodeDirectory  CodeSignature
Mac/Kext/tap.kext/Contents/: Info.plist
Mac/Kext/tap.kext/Contents/MacOS/: tap
Mac/Kext/tun-20090913.kext/Contents/: Info.plist
Mac/Kext/tun-20090913.kext/Contents/MacOS/: tun
Mac/Kext/tun-bak.kext/Contents/: Info.plist
Mac/Kext/tun-signed.kext/Contents/: Info.plist
Mac/Kext/tun-signed.kext/Contents/_CodeSignature/: CodeDirectory  CodeSignature
Mac/Kext/tun.kext/Contents/: Info.plist
Mac/Kext/tun.kext/Contents/MacOS/: tun
QtSingleApplication/: qtlockedfile.h  qtsingleapplication.h
Unix/: connection.cpp  connection.h
Windows/: connection.cpp  connection.h  qopenvpn.cpp  qopenvpn.h
Windows/openvpnservice/: log.cpp  log.h  main.cpp  openvpnservice.pro
Windows/openvpnservice/src/: qtservice.pri
ovpnconfs/: config.ovpn
